--- a/climate.html
+++ b/climate.html
@@ -21,7 +21,6 @@
                 <li><a href="wildlife.html">WILDLIFE</a></li>
                 <li><a href="oceans.html">OCEANS</a></li>
                 <li><a href="solutions.html">SOLUTIONS</a></li>
-                <li><a href="share.html">SHARE YOUR STORIES</a></li>
                 <li><a href="#footer">FOLLOW US</a></li>
                 <li><a href="index.html">HOME</a></li>
             </ul>
@@ -59,6 +58,23 @@
         Your browser does not support the video tag.
     </video>
 
+    <section class="iceberg_para" >
+        <hr>
+        <img class="ice" src="iceberg.jpg" alt="ice berg">
+        <div>
+            <h1><span id="red_word">Climate Calamity</span></h1>
+            <h6>The evidence for the climate crisis is clear.<br>
+
+                Since the industrial revolution, human activities such as burning fossil fuels, cutting down forests and certain types of livestock farming have released carbon dioxide and other heat-trapping greenhouse gases into the atmosphere. This has already caused the average global temperature to rise by more than 1°C, with levels of greenhouse gases in the atmosphere now higher than they have been at any point in human existence.
+                
+                And scientists agree that more than 1.5°C of warming will likely have catastrophic impacts.<br>
+                
+                And all this could happen within a human lifespan, leaving our children and grandchildren to cope with the results.
+            </h6>
+            <hr>
+        </div>
+    </section>
+
     <section>
         <div class="quote">
             'WE NEED A RAPID AND DEEP CHANGE IN THE WAY WE DO BUSINESS, HOW WE GENERATE POWER, HOW WE BUILD CITIES, HOW WE MOVE, AND HOW WE FEED THE WORLD. IF WE DON'T URGENTLY CHANGE OUR WAY OF LIFE, WE JEOPARDIZE LIFE ITSELF.'
@@ -82,7 +98,6 @@
                 <li><a href="wildlife.html">WILDLIFE</a></li>
                 <li><a href="oceans.html">OCEANS</a></li>
                 <li><a href="solutions.html">SOLUTIONS</a></li>
-                <li><a href="share.html">SHARE YOUR STORIES</a></li>
             </ul>
         </div>
         <div class="part2">
