--- a/forests.html
+++ b/forests.html
@@ -21,7 +21,6 @@
                 <li><a href="wildlife.html">WILDLIFE</a></li>
                 <li><a href="oceans.html">OCEANS</a></li>
                 <li><a href="solutions.html">SOLUTIONS</a></li>
-                <li><a href="share.html">SHARE YOUR STORIES</a></li>
                 <li><a href="#footer">FOLLOW US</a></li>
                 <li><a href="index.html">HOME</a></li>
             </ul>
@@ -60,6 +59,7 @@
     </video>
 
     <section>
+        <img class="tree" src="tree.jpg" alt="tree">
         <div class="numbers">
             <span id="red_word">1/2</span>   forests are home to almost half the species on land.<br>
             <span id="red_word">1 BILLION</span>   people live in and around forests.<br>
@@ -91,7 +91,6 @@
                 <li><a href="wildlife.html">WILDLIFE</a></li>
                 <li><a href="oceans.html">OCEANS</a></li>
                 <li><a href="solutions.html">SOLUTIONS</a></li>
-                <li><a href="share.html">SHARE YOUR STORIES</a></li>
             </ul>
         </div>
         <div class="part2">
