--- a/oceans.html
+++ b/oceans.html
@@ -22,7 +22,6 @@
                 <li><a href="wildlife.html">WILDLIFE</a></li>
                 <li><a href="oceans.html">OCEANS</a></li>
                 <li><a href="solutions.html">SOLUTIONS</a></li>
-                <li><a href="share.html">SHARE YOUR STORIES</a></li>
                 <li><a href="#footer">FOLLOW US</a></li>
                 <li><a href="index.html">HOME</a></li>
             </ul>
@@ -59,11 +58,12 @@
     </video>
 
     <section>
+        <img class="tree" src="beach.jpg" alt="tree">
         <div class="numbers">
             <span id="red_word">2/3</span>    of global gross marine product relies on a healthy ocean<br>
-            <span id="red_word">30%</span>    Anthropogenic CO2 emissions are absorbed by the ocean<br>
-            <span id="red_word">90%</span>    of the world's seafood comes from small-scale fisheries<br>
-            <span id="red_word">500 MILLION</span>   people depend on coastal resources for food<br>
+            <span id="red_word">30%</span>    CO2 emissions are absorbed by the ocean<br>
+            <span id="red_word">90%</span>    of the world's seafood comes from fisheries<br>
+            <span id="red_word">500 M</span>   people depend on coastal resources for food<br>
         </div>
     </section>
 
@@ -90,7 +90,6 @@
                 <li><a href="wildlife.html">WILDLIFE</a></li>
                 <li><a href="oceans.html">OCEANS</a></li>
                 <li><a href="solutions.html">SOLUTIONS</a></li>
-                <li><a href="share.html">SHARE YOUR STORIES</a></li>
             </ul>
         </div>
         <div class="part2">
