--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
         <div class="part1">
             <h2>DISCOVER</h2>
             <ul>
-                <li><a href="#">CLIMATE</a></li>
-                <li><a href="#">FORESTS</a></li>
-                <li><a href="#">WILDLIFE</a></li>
-                <li><a href="#">OCEANS</a></li>
-                <li><a href="#">SOLUTIONS</a></li>
+                <li><a href="climate.html">CLIMATE</a></li>
+                <li><a href="forests.html">FORESTS</a></li>
+                <li><a href="wildlife.html">WILDLIFE</a></li>
+                <li><a href="oceans.html">OCEANS</a></li>
+                <li><a href="solutions.html">SOLUTIONS</a></li>
             </ul>
         </div>
         <div class="part2">
