--- a/climate.html
+++ b/climate.html
@@ -11,9 +11,12 @@
     <title>Rescue - Climate</title>
 </head>
 <body>
+
+    <audio src="wind.mp3" autoplay loop></audio>
+    
     <nav class="navigation">
         <button class="discover" onclick="show()"><h1>DISCOVER</h1></button>
-
+        <!--onclick method used to execute show() function in JavaScript-->
         <div>
             <ul class="drop_down">
                 <li><a href="climate.html">CLIMATE</a></li>
