--- a/forests.html
+++ b/forests.html
@@ -11,6 +11,9 @@
     <title>Rescue - Forests</title>
 </head>
 <body>
+
+    <audio src="forest.mp3" autoplay loop></audio>
+    
     <nav class="navigation">
         <button class="discover" onclick="show()"><h1>DISCOVER</h1></button>
 
@@ -59,7 +62,7 @@
     </video>
 
     <section>
-        <img class="tree" src="tree.jpg" alt="tree">
+        <img class="tree" src="tree.jpg" alt="tree"> <!--image used as background with text on top-->
         <div class="numbers">
             <span id="red_word">1/2</span>   forests are home to almost half the species on land.<br>
             <span id="red_word">1 BILLION</span>   people live in and around forests.<br>
