--- a/oceans.html
+++ b/oceans.html
@@ -11,6 +11,8 @@
     <title>Rescue - Oceans</title>
 </head>
 <body>
+
+    <audio src="waves.mp3" autoplay loop></audio>
     
     <nav class="navigation">
         <button class="discover" onclick="show()"><h1>DISCOVER</h1></button>
@@ -41,7 +43,7 @@
 
     <section>
         <div class="heading2">
-            <h1>AN OCEAN OF<br><span id="red_word">OPPORTUNITY</span></h1>
+            <h1>AN OCEAN OF<br><span id="red_word">CHOICES</span></h1>
         </div>
         <div class="para1">
             The global ocean, the Earth's oceanic waters, including the Arctic, Atlantic, Indian, Pacific and Southern oceans, supplies more than half the oxygen we breathe, and provides food and livelihoods for billions of people worldwide. It is also home to a wondrous array of wild species, from tiny plankton to the biggest creature that's ever existed, the blue whale.<br><br>
