--- a/wildlife.html
+++ b/wildlife.html
@@ -11,6 +11,9 @@
     <title>Rescue - Wildlife</title>
 </head>
 <body>
+
+    <audio src="wildlife.mp3" autoplay loop></audio>
+    
     <nav class="navigation">
         <button class="discover" onclick="show()"><h1>DISCOVER</h1></button>
 
