--- a/solutions.html
+++ b/solutions.html
@@ -11,6 +11,9 @@
     <title>Rescue - Solutions</title>
 </head>
 <body>
+
+    <audio src="nature.mp3" autoplay loop></audio>
+    
     <nav class="navigation">
         <button class="discover" onclick="show()"><h1>DISCOVER</h1></button>
 
