--- a/oceans.html
+++ b/oceans.html
@@ -60,7 +60,7 @@
     </video>
 
     <section>
-        <img class="tree" src="beach.jpg" alt="tree">
+        <img class="beach" src="beach.jpg" alt="tree">
         <div class="numbers">
             <span id="red_word">2/3</span>    of global gross marine product relies on a healthy ocean<br>
             <span id="red_word">30%</span>    CO2 emissions are absorbed by the ocean<br>
